# swf_animation

./: .gitignore  Cargo.toml  LICENSE  Note.md  README.md  tag.txt
.github/workflows/: rust.yml
convert/: Cargo.toml
convert/src/: animation.rs  bitmap.rs  main.rs  render.rs  tessellator.rs
convert/src/animation/: filter.rs
convert/src/render/shaders/: bitmap.wgsl  color.wgsl  gradient.wgsl
core/: Cargo.toml
core/examples/: convert.rs  kabu_swf_cover_demo.rs  parse.rs  swf_runtime.rs
core/src/: character.rs  config.rs  container.rs  context.rs  display_object.rs  frame_lifecycle.rs  lib.rs  library.rs  loader.rs  main.rs  player.rs  string.rs  tag_utils.rs
core/src/display_object/: bitmap.rs  container.rs  graphic.rs  interactive.rs  morph_shape.rs  movie_clip.rs  stage.rs
core/src/display_object/bitmap/: bitmap_data.rs
core/tests/swfs/: frames.swf  gradient.swf  layer.swf  layer2.swf  mult_draw.swf  spirit2159src.swf
core/tests/swfs/new/: spirit2159src.swf  spirit2159src2.swf  spirit2159src3.swf  spirit2159src4.swf
demo/: Cargo.toml
demo/src/: character.rs  container.rs  context.rs  display_object.rs  graphic.rs  lib.rs  library.rs  movie_clip.rs  player.rs  stage.rs
demo/src/display_object/: graphic.rs  morph_shape.rs  movie_clip.rs
desktop/: Cargo.toml
desktop/src/: app.rs  main.rs  movie.rs  player.rs  render_controller.rs
desktop/src/wgsl/: blit.wgsl
docs/new_json_rule/: test.json
output/frames/: animation.json
output/head/: animation.json
output/layer/: animation.json
output/layer2/: animation.json
player_core/: Cargo.toml
render/: Cargo.toml
runtime/: Cargo.toml  test.json
runtime/src/: core.rs  lib.rs  parser.rs
runtime/src/core/: error.rs  filter.rs
runtime/src/parser/: bitmap.rs  decode.rs  parse_shape.rs  types.rs
runtime/src/parser/decode/: error.rs
runtime/src/parser/parse_shape/: matrix.rs  shape_utils.rs  tessellator.rs
stu/: Cargo.toml
stu/src/: main.rs
swf_derive/: Cargo.toml
swf_derive/src/: lib.rs
swf_parse/: Cargo.toml
swf_parse/src/: character.rs  config.rs  context.rs  display_object.rs  drawing.rs  lib.rs  library.rs  main.rs  parse.rs  player.rs  tag_utils.rs
swf_parse/src/display_object/: container.rs  graphic.rs  morph_shape.rs  movie_clip.rs  stage.rs
swf_to_json/: Cargo.toml  Settings.toml
swf_to_json/src/: animation.rs  lib.rs  main.rs  render.rs  shape.rs  tessellator.rs
swf_to_json/src/render/: bitmap.rs  filter.rs  mesh.rs  tessellator.rs
swf_to_json/src/render/bitmap/: decoder.rs
