[package]
name = "convert"
version = "0.1.0"
edition = "2021"

[dependencies]
swf = { workspace = true }
ruffle_render = { workspace = true, features = ["tessellator"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

player_core = { path = "../core" }


wgpu = "22.1.0"
futures = "0.3.30"
lyon_tessellation = "1.0"
indexmap = "2.2.6"
image = "0.25"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.19", features = ["derive"] }
clap = { version = "4.5.20", features = ["derive"] }
