[package]
name = "convert"
version = "0.1.0"
edition = "2021"
description = "A tool for extracting shapes from flash animations and converting animation data to JSON format."
license = "MIT OR Apache-2.0"
repository = "https://github.com/aojiaoxiaolinlin/swf_animation"
authors = ["傲娇小霖霖"]


[dependencies]
swf = { git = "https://github.com/ruffle-rs/ruffle.git", tag = "nightly-2024-10-25" }
ruffle_render = { git = "https://github.com/ruffle-rs/ruffle.git", tag = "nightly-2024-10-25", features = [
    "tessellator",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

wgpu = "22.1.0"
futures = "0.3.30"
lyon_tessellation = "1.0"
indexmap = "2.2.6"
image = "0.25"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.19", features = ["derive"] }
clap = { version = "4.5.20", features = ["derive"] }
