[package]
name = "player_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swf = { path = "../../ruffle/swf" }
ruffle_wstr = { path = "../../ruffle/wstr" }
ruffle_render = { path = "../../ruffle/render" }
anyhow = { workspace = true }
bitflags = "2.5.0"
thiserror = "1.0"
url = "2.5"