[package]
name = "runtime"
version = "0.1.0"
edition = "2024"


[dependencies]
swf_derive = { path = "../swf_derive" }

swf = "0.2.2"
jpeg-decoder = "0.3"
png = "0.17"
gif = "0.13"
flate2 = "1.1"
lyon_tessellation = "1.0"
indexmap = "2.2.6"
glam = "0.30.1"


anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
enum-map = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
