[package]
name = "swf_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swf = { path = "../../ruffle/swf" }
ruffle_render = { path = "../../ruffle/render" }
ruffle_wstr = { path = "../../ruffle/wstr" }
thiserror = "1.0"
weak-table = "0.3.2"