[package]
name = "swf_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swf = { path = "../../ruffle/swf" }
ruffle_render = { path = "../../ruffle/render" }
ruffle_wstr = { path = "../../ruffle/wstr" }
ruffle_macros = { path = "../../ruffle/core/macros" }
thiserror = "1.0"
weak-table = "0.3.2"
bitflags = "2.5.0"
serde = { version = "1.0.198", features = ["derive"] }
