[package]
name = "swf_to_json"
version = "0.2.0"
edition = "2024"
description = "A tool for extracting shapes from flash animations and converting animation data to JSON format."
license = "MIT OR Apache-2.0"
repository = "https://github.com/aojiaoxiaolinlin/swf_animation"
authors = ["傲娇小霖霖"]


[dependencies]
swf = "0.2"
wide = "0.7.32"
jpeg-decoder = "0.3.1"
png = "0.17.16"
gif = "0.13.1"
flate2 = "1.1.1"
thiserror = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

wgpu = "25"
futures = "0.3.30"
lyon_tessellation = "1.0"
image = "0.25"
indicatif = "0.17"
rmp-serde = "1.3.0"
config = "0.15.0"

indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { version = "1.19", features = ["derive"] }
clap = { version = "4.5.20", features = ["derive"] }

# 配置build优化
[profile.release]
opt-level = 3
